GPencil: Fill freezes when use invert and click inside areas #96518

Closed
opened 2022-03-16 11:49:14 +01:00 by trim brimbo · 11 comments

System Information
Operating system: Linux-5.15.28-1-lts-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54

Blender Version
Broken: version: 3.1.0, branch: makepkg (modified), commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181

Short description of error
Grease Pencil function to fill inverted area freezes Blender and then whole system.

Exact steps for others to reproduce the error

  • Launch Blender
  • Open a new 2D animation file
  • Draw a box inside another box
  • Select fill tool
  • Select a fill material
  • Change the fill direction to 'inverted' by selecting '-' button
    image.png
  • Click anywhere inside the inner box or outer box
  • Nothing happens other than a few pixels wide small black square with numbers '5 0' appearing. It immediately freezes Blender. In a few seconds or immediately mouse or keyboard stops working. I have to restart computer using power button. On one occasion I was able to open system monitor to see CPU was working at 100%. On that occasion Blender crashed rather then system freeze.
**System Information** Operating system: Linux-5.15.28-1-lts-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 **Blender Version** Broken: version: 3.1.0, branch: makepkg (modified), commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` **Short description of error** Grease Pencil function to fill inverted area freezes Blender and then whole system. **Exact steps for others to reproduce the error** - Launch Blender - Open a new 2D animation file - Draw a box inside another box - Select fill tool - Select a fill material - Change the fill direction to 'inverted' by selecting '-' button ![image.png](https://archive.blender.org/developer/F12929958/image.png) - Click anywhere inside the inner box or outer box - Nothing happens other than a few pixels wide small black square with numbers '5 0' appearing. It immediately freezes Blender. In a few seconds or immediately mouse or keyboard stops working. I have to restart computer using power button. On one occasion I was able to open system monitor to see CPU was working at 100%. On that occasion Blender crashed rather then system freeze.
Author

Added subscriber: @tbrimbo

Added subscriber: @tbrimbo

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed. Might be a memory leak, since the RAM usage is getting higher and higher when doing that and Blender crashes.

Confirmed. Might be a memory leak, since the RAM usage is getting higher and higher when doing that and Blender crashes.
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Member

If you are on KDE you can save your computer from going down by pressing Ctrl+Alt+Esc and then click on blender to kill it.

If you are on KDE you can save your computer from going down by pressing Ctrl+Alt+Esc and then click on blender to kill it.
Author

In #96518#1324006, @HDMaster84 wrote:
If you are on KDE you can save your computer from going down by pressing Ctrl+Alt+Esc and then click on blender to kill it.

Thanks. I am on Cinnamon. Just refreshed my memory of xkill process if keyboard is still active: Alt+F2 to launch dialog box > xkill > click on Blender to kill it.

It kills Blender. Then in about 5-10 seconds mouse and keyboard freezes. Memory and CPU overloads according to system monitor. It lasts about 20-30 seconds until they are released again.

> In #96518#1324006, @HDMaster84 wrote: > If you are on KDE you can save your computer from going down by pressing Ctrl+Alt+Esc and then click on blender to kill it. Thanks. I am on Cinnamon. Just refreshed my memory of xkill process if keyboard is still active: Alt+F2 to launch dialog box > xkill > click on Blender to kill it. It kills Blender. Then in about 5-10 seconds mouse and keyboard freezes. Memory and CPU overloads according to system monitor. It lasts about 20-30 seconds until they are released again.
Antonio Vazquez self-assigned this 2022-03-16 13:49:35 +01:00

It looks an infinite loop more than a memory leak

It looks an infinite loop more than a memory leak

This issue was referenced by 99ce71dd5b

This issue was referenced by 99ce71dd5b756bcbd5d8dbbb71fe168dd62ef0f6

This issue was referenced by 79e74b1486

This issue was referenced by 79e74b14861e996bbb1d858409f527908b18d3e0
Antonio Vazquez changed title from GPencil: 'Fill Tool Direction - Inverted' freezes the whole system to GPencil: Fill freezes when use invert and click inside areas 2022-03-16 16:25:54 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96518
No description provided.